@@ -65,6 +65,8 @@ impl AEADAlgorithm {
         match &self {
             EAX
                 => true,
+            GCM
+                => true,
             OCB | Private(_) | Unknown(_)
                 => false,
         }
@@ -74,6 +76,17 @@ impl AEADAlgorithm {
     pub(crate) fn supports_symmetric_algo(&self, algo: &SymmetricAlgorithm) -> bool {
         match &self {
             AEADAlgorithm::EAX =>
+                match algo {
+                    SymmetricAlgorithm::AES128 |
+                    SymmetricAlgorithm::AES192 |
+                    SymmetricAlgorithm::AES256 |
+                    SymmetricAlgorithm::Twofish |
+                    SymmetricAlgorithm::Camellia128 |
+                    SymmetricAlgorithm::Camellia192 |
+                    SymmetricAlgorithm::Camellia256 => true,
+                    _ => false,
+                },
+            AEADAlgorithm::GCM =>
                 match algo {
                     SymmetricAlgorithm::AES128 |
                     SymmetricAlgorithm::AES192 |
