@@ -965,6 +965,8 @@ pub enum AEADAlgorithm {
     EAX,
     /// OCB mode.
     OCB,
+    /// Galois/Counter mode.
+    GCM,
     /// Private algorithm identifier.
     Private(u8),
     /// Unknown algorithm identifier.
@@ -972,9 +974,10 @@ pub enum AEADAlgorithm {
 }
 assert_send_and_sync!(AEADAlgorithm);
 
-const AEAD_ALGORITHM_VARIANTS: [AEADAlgorithm; 2] = [
+const AEAD_ALGORITHM_VARIANTS: [AEADAlgorithm; 3] = [
     AEADAlgorithm::EAX,
     AEADAlgorithm::OCB,
+    AEADAlgorithm::GCM,
 ];
 
 impl AEADAlgorithm {
@@ -1007,6 +1010,7 @@ impl From<u8> for AEADAlgorithm {
         match u {
             1 => AEADAlgorithm::EAX,
             2 => AEADAlgorithm::OCB,
+            3 => AEADAlgorithm::GCM,
             100..=110 => AEADAlgorithm::Private(u),
             u => AEADAlgorithm::Unknown(u),
         }
@@ -1018,6 +1022,7 @@ impl From<AEADAlgorithm> for u8 {
         match s {
             AEADAlgorithm::EAX => 1,
             AEADAlgorithm::OCB => 2,
+            AEADAlgorithm::GCM => 3,
             AEADAlgorithm::Private(u) => u,
             AEADAlgorithm::Unknown(u) => u,
         }
@@ -1050,6 +1055,8 @@ impl fmt::Display for AEADAlgorithm {
                     f.write_str("EAX mode"),
                 AEADAlgorithm::OCB =>
                     f.write_str("OCB mode"),
+                AEADAlgorithm::GCM =>
+                    f.write_str("GCM mode"),
                 AEADAlgorithm::Private(u) =>
                     f.write_fmt(format_args!("Private/Experimental AEAD algorithm {}", u)),
                 AEADAlgorithm::Unknown(u) =>
@@ -1061,6 +1068,8 @@ impl fmt::Display for AEADAlgorithm {
                     f.write_str("EAX"),
                 AEADAlgorithm::OCB =>
                     f.write_str("OCB"),
+                AEADAlgorithm::GCM =>
+                    f.write_str("GCM"),
                 AEADAlgorithm::Private(u) =>
                     f.write_fmt(format_args!("Private AEAD algo {}", u)),
                 AEADAlgorithm::Unknown(u) =>
